--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(setWidgetIdSeed)
 export(shinyRenderWidget)
 export(shinyWidgetOutput)
 export(sizingPolicy)
+export(toHTML)
 import(htmltools)
 importFrom(utils,browseURL)
 importFrom(utils,file.edit)
